# llm-grow

./: .gitignore  .pre-commit-config.yaml  Prompt.md  README.md  README_zh.md  REVIEW_REPORT.md  pyproject.toml
.github/workflows/: ci.yml
configs/Kimi-K2-Base/: depth.yaml  expert_clone.yaml
configs/LongCat-Flash-Chat/: depth.yaml  expert_clone.yaml  expert_upcycling.yaml
configs/Qwen3-0.6B/: llama_pro.yaml  multi_axis_pad.yaml  overlap_copy.yaml  zero_block_insert.yaml
configs/Qwen3-30B-A3B/: depth.yaml  expert_clone.yaml  expert_upcycling.yaml
configs/Qwen3-8B/: dense_to_moe.yaml  multi_axis_grow.yaml  zero_block_insert.yaml
configs/deepseek_moe/: kimi_k2_base_2x.yaml
configs/dense/: qwen3_0.6b_2x.yaml
configs/llama_pro/: qwen3_8b_to_16b.yaml
configs/longcat/: longcat_flash_2x.yaml
configs/moe_standard/: qwen3_30b_a3b_2x.yaml
configs/moe_upcycling/: qwen3_8b.yaml
configs/msg/: qwen3_8b_2x.yaml
docs/: README.md  expand_kimi_k2.md  expand_longcat_flash.md  expand_qwen3_0.6b.md  expand_qwen3_30b_a3b.md
examples/: expert_clone.py  test_longcat_dryrun.py  test_readme_examples.py  test_real_model.py
examples/common/: dense_to_moe.py  expand_multi_axis_pad.py  expand_zero_block_insert.py  expert_clone.py  helpers.py  model_paths.py  safetensor_expand.py  test_readme_examples.py  verify_safetensor.py
examples/deepseek/: auto_detect.py  dryrun.py  test_auto_detect.py  test_dryrun.py
examples/generic/: dense_to_moe.py  expert_clone.py  multi_axis_pad.py  zero_block_insert.py
examples/longcat/: auto_detect.py  dryrun.py  test_auto_detect.py  test_dryrun.py
examples/qwen3/: auto_detect.py  dryrun.py  in_memory.py  safetensor_verify.py  test_auto_detect.py  test_dryrun.py  test_real_model.py  test_safetensor_verify.py
scripts/: dense_to_moe.py  expand_llama_pro.py  expand_msg.py  expand_zero_block_insert.py  expert_upcycling.py  moe_upcycling.py  safetensor_expand.py  test_auto_detect.py  test_longcat_dryrun.py  test_qwen3_kimi_dryrun.py  test_readme_examples.py  test_real_model.py  test_safetensor_verify.py  verify_safetensor.py
src/llm_grow/: __init__.py  cli.py
src/llm_grow/configs/: __init__.py  base.py  constants.py
src/llm_grow/core/: __init__.py  inspector.py  markers.py
src/llm_grow/eval/: __init__.py  fp_verifier.py  recovery_curve.py  structural.py
src/llm_grow/expanders/: __init__.py  base.py  registry.py
src/llm_grow/initializers/: __init__.py  identity.py  net2net.py  noise.py  svd_interp.py  symmetry_break.py
src/llm_grow/safetensor/: __init__.py  auto.py  base.py  detect.py  inspector.py  llama_pro.py  longcat.py  moe_generic.py  msg.py  multi_axis_pad.py  overlap_copy.py  recipe.py  shard_writer.py  solar_dus.py  utils.py  writer.py  zero_block_insert.py
src/llm_grow/training/: __init__.py  distillation.py  freeze.py  growth_scheduler.py  load_balance.py
src/llm_grow/utils/: __init__.py  arch_info.py  expansion_rules.py  insertion.py  logger_utils.py  (+2 more)
tests/: conftest.py  test_cli.py  test_configs.py  test_eval.py  test_expanders.py  test_initializers.py  test_initializers_advanced.py  test_lesa_expander.py  test_moe_expanders.py  test_msg_expander.py  test_net2net.py  test_recovery_curve.py  test_safetensor_auto.py  test_safetensor_base.py  test_training.py  test_utils.py
tests/initializers/: test_identity.py  test_svd_interp.py  test_symmetry_break.py
tests/safetensor/: test_auto.py  test_base.py  test_detect.py  test_inspector.py  test_shard_writer.py  test_writer.py
tests/training/: test_distillation.py  test_freeze.py  test_growth_scheduler.py  test_load_balance.py
tests/utils/: test_arch_info.py  test_expansion_rules.py  test_insertion.py  test_safetensor_utils.py
(+36 files in other folders)
