[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-grow"
version = "0.1.0"
description = "Modular toolkit for LLM parameter expansion — depth, width, MoE upcycling and beyond."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["llm", "model-expansion", "moe", "upcycling", "llama-pro", "msg"]

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.29.0",
    "safetensors>=0.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[project.optional-dependencies]
train = [
    "deepspeed>=0.14.0",
    "flash-attn>=2.5.0",
    "datasets>=2.19.0",
]
eval = [
    "lm-eval>=0.4.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4.0",
    "mypy>=1.9",
]

[project.scripts]
llm-grow = "llm_grow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
