[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-grow"
version = "0.1.0"
description = "Modular toolkit for LLM parameter expansion — depth, width, MoE upcycling and beyond."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["llm", "model-expansion", "moe", "upcycling", "llama-pro", "msg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [{ name = "jianzhnie", email = "jianzhnie@gmail.com" }]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.29.0",
    "safetensors>=0.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/jianzhnie/llm-grow"
Repository = "https://github.com/jianzhnie/llm-grow"
Issues = "https://github.com/jianzhnie/llm-grow/issues"

[project.optional-dependencies]
train = [
    "deepspeed>=0.14.0",
    "flash-attn>=2.5.0",
    "datasets>=2.19.0",
]
eval = [
    "lm-eval>=0.4.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4.0",
    "mypy>=1.9",
]

[project.scripts]
llm-grow = "llm_grow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "I",    # Isort
    "B",    # Flake8-bugbear
    "C4",   # Flake8-comprehensions
    "SIM",  # Flake8-simplify
    "UP",   # Pyupgrade
    "RUF",  # Ruff-specific rules
]
ignore = [
    "RUF001",  # Ambiguous unicode in string — intentional CJK punctuation
    "RUF002",  # Ambiguous unicode in docstring — intentional CJK text
    "RUF003",  # Ambiguous unicode in comment — intentional CJK text
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
